# nwp

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  ruff.toml  setup.py
.github/workflows/: workflows.yaml
icon/: app.py  consts.py  utils.py
nwp/: __init__.py
nwp/ecmwf/: process_raw_ecmwf.py
nwp/excarta/: excarta_processing.py  excarta_temp_proc_analysis.ipynb  merge_excarta.py  parse_excarta_monthly.py  parse_excarta_to_output.py  parse_excarta_to_output_low_mem.py  run_script_excarta.sh
nwp/icon/: app.py  consts.py  utils.py
nwp/meteofrance/: app.py
scripts/: convert_NWP_grib_to_zarr.py  convert_icon_archive.py  download_UK_Met_Office_NWPs_from_CEDA.sh  download_combine_upload_icon_eu.py  download_combine_upload_icon_global.py  recompress_NWP_zarr_to_new_zarr.py
